namespace countMastersTest.infrastructure.constants
{
    public static class AnimationParametersName
    {
        //Triggers
        public const string IDLE = "Idle";
        public const string DEATH = "Death";
        //Value
        public const string RUN = "MoveSpeed";
        public const string IS_ATTACK = "Attack";
    }
}
